--- a/aoc2020.cabal
+++ b/aoc2020.cabal
@@ -25,12 +25,15 @@ library
   exposed-modules:
       Lib
       Sonar
+      Submarine
   other-modules:
       Paths_aoc2020
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , split
+    , text
   default-language: Haskell2010
 
 executable aoc2020-exe
@@ -43,6 +46,8 @@ executable aoc2020-exe
   build-depends:
       aoc2020
     , base >=4.7 && <5
+    , split
+    , text
   default-language: Haskell2010
 
 test-suite aoc2020-test
@@ -52,6 +57,8 @@ test-suite aoc2020-test
       Day1Part1Spec
       Day1Part2Spec
       Day1PuzzleInput
+      Day2Part1Spec
+      Day2PuzzleInput
       HelloWorldSpec
       Paths_aoc2020
   hs-source-dirs:
@@ -60,6 +67,8 @@ test-suite aoc2020-test
   build-depends:
       aoc2020
     , base >=4.7 && <5
+    , split
     , tasty
     , tasty-hspec
+    , text
   default-language: Haskell2010
