--- a/aoc2020.cabal
+++ b/aoc2020.cabal
@@ -30,6 +30,8 @@ library
       Paths_aoc2020
   hs-source-dirs:
       src
+  default-extensions:
+      DuplicateRecordFields
   build-depends:
       base >=4.7 && <5
     , split
@@ -58,6 +60,7 @@ test-suite aoc2020-test
       Day1Part2Spec
       Day1PuzzleInput
       Day2Part1Spec
+      Day2Part2Spec
       Day2PuzzleInput
       HelloWorldSpec
       Paths_aoc2020
